link privacy policy in tc.html

--- a/tc.html
+++ b/tc.html
@@ -180,7 +180,7 @@
             <li>Remove excessive or burdensome content...</li>
         </ul>
         
-        <h1>10. PRIVACY POLICY</h1>
+        <a href="privacy.html"><h1>10. PRIVACY POLICY</h1></a>
         <p>We care about data privacy and security...</p>
         
         <h1>11. TERM AND TERMINATION</h1>
