minor update privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -67,7 +67,7 @@
     
         <p><strong>Last updated March 01, 2025</strong></p>
         
-        <h2>AGREEMENT TO OUR PRIVACY TERMS</h2>
+        <h2>AGREEMENT TO OUR <a href="https://7xttacademy.com/tc.html">TERMS</a></h2>
         <p>We are 7X TT Academy ("Company," "we," "us," "our"), a table tennis academy located in India at K4, Sector 116, Noida, UP 201301.</p>
         <p>We operate the website <a href="https://www.7xttacademy.com">https://www.7xttacademy.com</a> (the "Site"), as well as table tennis coaching services that refer or link to these legal terms (the "Legal Terms") (collectively, the "Services").</p>
         <p>You can contact us by email at <a href="mailto:7xttacademy@gmail.com">7xttacademy@gmail.com</a>.</p>
