link policy.html -> Update tc.html

--- a/tc.html
+++ b/tc.html
@@ -223,7 +223,7 @@
         <h2>20. ELECTRONIC COMMUNICATIONS, TRANSACTIONS, AND SIGNATURES</h2>
         <p>Visiting the Services, sending us emails, and completing online forms constitute electronic communications...</p>
 
-        <h2>21. SHIPPING AND DELIVERY</h2>
+        <a href="policy.html"><h2>21. SHIPPING AND DELIVERY</h2></a>
         <p>We do not proivde shipping or delivery of any product...</p>
 
         <h2>22. MISCELLANEOUS</h2>
