--- a/index.html
+++ b/index.html
@@ -111,15 +111,17 @@
           <div class="col-lg-5" data-aos="fade-up" data-aos-delay="250">
             <div class="content ps-0 ps-lg-5">
               <p class="fst-italic">
-                One academy for all. We offer training to all levels and ages, starting age 5+. Our state-of-the-art facilities and experienced trainers ensure that you receive the best training possible. 
+                One academy for all. We offer training for all levels and ages, starting from age 5+. Our state-of-the-art facilities and experienced trainers ensure that you receive the best training possible. 
               </p>
               <ul>
-                <li><i class="bi bi-check-circle-fill"></i> <span>Personalized Training</span></li>
+                <li><i class="bi bi-check-circle-fill"></i> <span>Professional Coaching</span></li>
                 <li><i class="bi bi-check-circle-fill"></i> <span>Tournament Preparation</span></li>
+                <li><i class="bi bi-check-circle-fill"></i> <span>Personal Training</span></li>
+                <li><i class="bi bi-check-circle-fill"></i> <span>Fitness Sessions</span></li>
                 <li><i class="bi bi-check-circle-fill"></i> <span>Facility Rental</span></li>
               </ul>
               <p>
-                Discover the joy of playing table tennis with national and state level players. From advanced techniques to fitness, we cover every aspect of your game.
+                Discover the joy of playing table tennis with national and state-level players. From advanced techniques to fitness, we cover every aspect of your game.
               </p>
 
               <div class="position-relative mt-4">
@@ -334,12 +336,6 @@
             <div class="team-member">
               <div class="member-img">
                 <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
               </div>
               <div class="member-info">
                 <h4>Sarthak</h4>
@@ -353,12 +349,6 @@
             <div class="team-member">
               <div class="member-img">
                 <img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
               </div>
               <div class="member-info">
                 <h4>Mohit</h4>
@@ -372,17 +362,11 @@
             <div class="team-member">
               <div class="member-img">
                 <img src="assets/img/chefs/chefs-3.png" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
               </div>
               <div class="member-info">
                 <h4>Ravi</h4>
                 <span>Coach</span>
-                <p>Sprots Authority of India certified with over 5 years of experience in developing champions</p>
+                <p>Sports Authority of India certified with over 5 years of experience in developing champions</p>
               </div>
             </div>
           </div><!-- End Chef Team Member -->
@@ -542,7 +526,7 @@
               <i class="icon bi bi-clock flex-shrink-0"></i>
               <div>
                 <h3>Opening Hours<br></h3>
-                <p><strong>Everyday:</strong> Morning 6-8AM, Evening 4-8PM; <strong>Tuesday:</strong> Closed</p>
+                <p><strong>Every day:</strong> Morning 6-8AM, Evening 4-8PM; <strong>Tuesday:</strong> Closed</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -625,10 +609,8 @@
         <div class="col-lg-3 col-md-6">
           <h4>Follow Us</h4>
           <div class="social-links d-flex">
-            <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.facebook.com/7xttacademy/" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/7xttacademy/" class="instagram"><i class="bi bi-instagram"></i></a>
           </div>
         </div>
 
