--- a/privacy.html
+++ b/privacy.html
@@ -133,10 +133,8 @@
         <div class="col-lg-3 col-md-6">
           <h4>Follow Us</h4>
           <div class="social-links d-flex">
-            <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.facebook.com/7xttacademy/" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/7xttacademy/" class="instagram"><i class="bi bi-instagram"></i></a>
           </div>
         </div>
 
