minor update index.html

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               </p>
               <ul>
                 <li><i class="bi bi-check-circle-fill"></i> <span>Professional Coaching</span></li>
-                <li><i class="bi bi-check-circle-fill"></i> <span>Tournament Preparation</span></li>
+                <li><i class="bi bi-check-circle-fill"></i> <span>Tournaments</span></li>
                 <li><i class="bi bi-check-circle-fill"></i> <span>Personal Training</span></li>
                 <li><i class="bi bi-check-circle-fill"></i> <span>Fitness Sessions</span></li>
                 <li><i class="bi bi-check-circle-fill"></i> <span>Facility Rental</span></li>
