--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/app_icon_512x512.png" alt="">
         <h1 class="sitename">7x TT Academy</h1>
         <span>.</span>
       </a>
