--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="#contact">Contact</a>
+      <a class="btn-getstarted" href="https://wa.me/919867670321">Contact</a>
 
     </div>
   </header>
@@ -74,7 +74,7 @@
             <h1 data-aos="fade-up">We are <br> 7x Table Tennis Academy</h1>
             <p data-aos="fade-up" data-aos-delay="100">Our training programs are designed for all levels.</p>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-              <a href="#contact" class="btn-get-started">Join Us</a>
+              <a href="https://wa.me/919867670321" class="btn-get-started">Know more</a>
             </div>
           </div>
           <div class="col-lg-5 order-2 order-lg-2 hero-img" data-aos="zoom-out">
@@ -533,36 +533,6 @@
 
         </div>
 
-        <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="600">
-          <div class="row gy-4">
-
-            <div class="col-md-6">
-              <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-            </div>
-
-            <div class="col-md-6 ">
-              <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-            </div>
-
-            <div class="col-md-12">
-              <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-            </div>
-
-            <div class="col-md-12">
-              <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-            </div>
-
-            <div class="col-md-12 text-center">
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your message has been sent. Thank you!</div>
-
-              <button type="submit">Send Message</button>
-            </div>
-
-          </div>
-        </form><!-- End Contact Form -->
-
       </div>
 
     </section><!-- /Contact Section -->
@@ -589,8 +559,8 @@
           <div>
             <h4>Contact</h4>
             <p>
-              <strong>Phone:</strong> <span>+91-9867670321</span><br>
-              <strong>Phone:</strong> <span>+91-8683874257</span><br>
+              <span>+91 98676 70321</span><br>
+              <span>+91 86838 74257</span><br>
             </p>
           </div>
         </div>
