--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     gtag('js', new Date());
   
     gtag('config', 'AW-11419615038');
+    gtag('config', 'AW-11419615038');
   </script>
   
 </head>
