--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
   
     gtag('config', 'AW-11419615038');
   </script>
+
+  <script>
+  gtag('event', 'conversion', {'send_to': 'AW-11419615038/_TSpCPGE86saEL7-pcUq'});
+  </script>
   
 </head>
 
