--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     gtag('config', 'AW-11419615038');
     gtag('event', 'conversion', {'send_to': 'AW-11419615038/_TSpCPGE86saEL7-pcUq'});
   </script>
+
+   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
   
 </head>
 
@@ -623,6 +625,8 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <!-- Google tag (gtag.js) --> <amp-analytics type="gtag" data-credentials="include"> <script type="application/json"> { "vars": { "gtag_id": "AW-11419615038", "config": { "AW-11419615038": { "groups": "default" } } }, "triggers": { } } </script> </amp-analytics>
 
 </body>
 
