--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
               </div>
               <div class="member-info">
                 <h4>Sarthak</h4>
-                <span>Founder & CEO</span>
+                <span>Co-Founder & CEO</span>
                 <p>Dedicated to inspiring and shaping young table tennis talent with passion</p>
               </div>
             </div>
