--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
           <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/chefs/chefs-5.png" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Sarthak</h4>
@@ -361,7 +361,7 @@
           <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/chefs/chefs-4.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Mohit</h4>
