--- a/index.html
+++ b/index.html
@@ -332,66 +332,7 @@
 
     </section><!-- /Testimonials Section -->
 
-    <!-- Chefs Section -->
-    <section id="chefs" class="chefs section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Team</h2>
-        <p><span>Our</span> <span class="description-title">Team<br></span></p>
-      </div><!-- End Section Title -->
-
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="team-member">
-              <div class="member-img">
-                <img src="assets/img/chefs/chefs-5.png" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Sarthak</h4>
-                <span>Co-Founder & CEO</span>
-                <p>Dedicated to inspiring and shaping young table tennis talent with passion</p>
-              </div>
-            </div>
-          </div><!-- End Chef Team Member -->
-
-          <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="team-member">
-              <div class="member-img">
-                <img src="assets/img/chefs/chefs-4.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Mohit</h4>
-                <span>Co-founder & Head Coach</span>
-                <p>A national player with deep expertise in table tennis techniques and tactics</p>
-              </div>
-            </div>
-          </div><!-- End Chef Team Member -->
-
-          <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-            <div class="team-member">
-              <div class="member-img">
-                <img src="assets/img/chefs/chefs-3.png" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Ravi</h4>
-                <span>Coach</span>
-                <p>Sports Authority of India certified with over 5 years of experience in developing champions</p>
-              </div>
-            </div>
-          </div><!-- End Chef Team Member -->
-
-        </div>
-
-      </div>
-
-    </section>
-    <!-- /Chefs Section -->
-
-    <!-- Gallery Section -->
+     <!-- Gallery Section -->
     <section id="gallery" class="gallery section light-background">
 
       <!-- Section Title -->
@@ -483,10 +424,70 @@
       </div>
     
     </section>
-    
-
+  
     <!-- /Gallery Section -->
 
+
+    <!-- Chefs Section -->
+    <section id="chefs" class="chefs section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Team</h2>
+        <p><span>Our</span> <span class="description-title">Team<br></span></p>
+      </div><!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="team-member">
+              <div class="member-img">
+                <img src="assets/img/chefs/chefs-5.png" class="img-fluid" style="max-width: 220px; height: auto;" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Sarthak</h4>
+                <span>Founder</span>
+                <p>Dedicated to inspiring and shaping young table tennis talent with passion</p>
+              </div>
+            </div>
+          </div><!-- End Chef Team Member -->
+
+          <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="team-member">
+              <div class="member-img">
+                <img src="assets/img/chefs/chefs-4.jpg" class="img-fluid" style="max-width: 220px; height: auto;" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Mohit</h4>
+                <span>Head Coach</span>
+                <p>A national player with deep expertise in table tennis techniques and tactics</p>
+              </div>
+            </div>
+          </div><!-- End Chef Team Member -->
+
+          <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+            <div class="team-member">
+              <div class="member-img">
+                <img src="assets/img/chefs/chefs-3.png" class="img-fluid" style="max-width: 220px; height: auto;" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Ravi</h4>
+                <span>Coach</span>
+                <p>Sports Authority of India certified with over 5 years of experience in developing champions</p>
+              </div>
+            </div>
+          </div><!-- End Chef Team Member -->
+
+        </div>
+
+      </div>
+
+    </section>
+    <!-- /Chefs Section -->
+
+   
     <!-- Contact Section -->
     <section id="contact" class="contact section">
 
