--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
           <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/chefs/chefs-4.jpg" class="img-fluid" style="max-width: 220px; height: auto;" alt="">
+                <img src="assets/img/chefs/chefs-6.png" class="img-fluid" style="max-width: 220px; height: auto;" alt="">
               </div>
               <div class="member-info">
                 <h4>Mohit</h4>
