Fix team member card heights

--- a/index.html
+++ b/index.html
@@ -27,6 +27,39 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <style>
+    /* Team Member Card Equal Heights */
+    .chefs .row {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .chefs .team-member {
+      width: 100%;
+      min-height: 450px;
+    }
+    .chefs .member-img {
+      height: 280px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .chefs .member-img img {
+      max-width: 180px !important;
+      height: auto !important;
+    }
+    .chefs .member-info {
+      min-height: 160px;
+      padding: 15px;
+    }
+    .chefs .member-info span {
+      display: block;
+      min-height: 40px;
+    }
+    .chefs .member-info p {
+      min-height: 70px;
+    }
+  </style>
+
   <!-- =======================================================
   * Template Name: Yummy
   * Template URL: https://bootstrapmade.com/yummy-bootstrap-restaurant-website-template/
@@ -589,8 +622,7 @@
               <div class="member-info">
                 <h4>Ravi</h4>
                 <span>Coach</span>
-                <p>Sports Authority of India certified with over 10 years of experience in developing champions</p>
-              </div>
+                <p>Sports Authority of India certified with 10+ years of experience in TT
             </div>
           </div><!-- End Chef Team Member -->
 
