--- a/technology.html
+++ b/technology.html
@@ -77,10 +77,10 @@
         
         <!-- Feature 1: Student Management -->
         <div class="row align-items-center mb-5 pb-5" data-aos="fade-up">
-          <div class="col-lg-6 order-lg-1">
+          <div class="col-lg-6 order-lg-1 mb-2">
             <img src="assets/img/app-sceenshots/Screenshot 2025-09-24 at 11.10.00.png" class="img-fluid rounded shadow" alt="Student Management">
           </div>
-          <div class="col-lg-6 order-lg-2">
+          <div class="col-lg-6 order-lg-2 mt-2">
             <h2 class="mb-4">Complete Student Management</h2>
             <p class="lead">Manage your students effortlessly with our comprehensive dashboard.</p>
             <ul class="list-unstyled">
@@ -94,10 +94,10 @@
 
         <!-- Feature 2: Payment & Billing -->
         <div class="row align-items-center mb-5 pb-5" data-aos="fade-up">
-          <div class="col-lg-6 order-lg-2">
+          <div class="col-lg-6 order-lg-2 mb-2">
             <img src="assets/img/app-sceenshots/Screenshot 2025-09-24 at 11.10.25.png" class="img-fluid rounded shadow" alt="Payment Management">
           </div>
-          <div class="col-lg-6 order-lg-1">
+          <div class="col-lg-6 order-lg-1 mt-2">
             <h2 class="mb-4">Get Paid Online and On Time</h2>
             <p class="lead">Streamline your payment process with automated billing and reminders.</p>
             <ul class="list-unstyled">
@@ -111,10 +111,10 @@
 
         <!-- Feature 3: Attendance & Scheduling -->
         <div class="row align-items-center mb-5 pb-5" data-aos="fade-up">
-          <div class="col-lg-6 order-lg-1">
+          <div class="col-lg-6 order-lg-1 mb-2">
             <img src="assets/img/app-sceenshots/Screenshot 2025-09-24 at 11.10.39.png" class="img-fluid rounded shadow" alt="Attendance Tracking">
           </div>
-          <div class="col-lg-6 order-lg-2">
+          <div class="col-lg-6 order-lg-2 mt-2">
             <h2 class="mb-4">Smart Attendance & Scheduling</h2>
             <p class="lead">Never miss a session with automated attendance tracking and scheduling.</p>
             <ul class="list-unstyled">
@@ -128,10 +128,10 @@
 
         <!-- Feature 4: Performance Analytics -->
         <div class="row align-items-center mb-5 pb-5" data-aos="fade-up">
-          <div class="col-lg-6 order-lg-2">
+          <div class="col-lg-6 order-lg-2 mb-2">
             <img src="assets/img/app-sceenshots/Screenshot 2025-09-24 at 11.11.53.png" class="img-fluid rounded shadow" alt="Analytics Dashboard">
           </div>
-          <div class="col-lg-6 order-lg-1">
+          <div class="col-lg-6 order-lg-1 mt-2">
             <h2 class="mb-4">Performance Analytics & Reports</h2>
             <p class="lead">Make data-driven decisions with comprehensive analytics and insights.</p>
             <ul class="list-unstyled">
