Fix closing tag for 'Years of collective experience'

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 </div>
                 <div class="col-md-6">
                   <h1 class="display-4 fw-bold text-white">35+</h1>
-                  <p>Years of collective experience/p>
+                  <p>Years of collective experience</p>
                 </div>
                 <div class="col-md-6">
                   <h1 class="display-4 fw-bold text-white">5+</h1>
