Update page title from 'Technology' to 'App'

--- a/technology.html
+++ b/technology.html
@@ -57,7 +57,7 @@
     <!-- Page Title -->
     <div class="page-title light-background">
       <div class="container">
-        <h1>Academy Management Technology</h1>
+        <h1>Academy Management App</h1>
         <p>Automate & grow your table tennis academy with our comprehensive management solution</p>
       </div>
     </div><!-- End Page Title -->
