Remove 'table tennis' from academy descriptions

--- a/technology.html
+++ b/technology.html
@@ -58,7 +58,7 @@
     <div class="page-title light-background">
       <div class="container">
         <h1>Academy Management App</h1>
-        <p>Automate & grow your table tennis academy with our comprehensive management solution</p>
+        <p>Automate & grow your academy with our comprehensive management solution</p>
       </div>
     </div><!-- End Page Title -->
 
@@ -66,7 +66,7 @@
     <section class="hero section" style="background: linear-gradient(135deg, #ce1212 0%, #8b0000 100%); padding: 80px 0;">
       <div class="container text-center text-white" data-aos="fade-up">
         <h2 class="display-4 fw-bold mb-4 text-white">Your Work. Simplified.</h2>
-        <p class="lead mb-4 text-white">Scale your table tennis academy by automating tasks, managing students, and engaging with clients through our powerful management platform.</p>
+        <p class="lead mb-4 text-white">Scale your academy by automating tasks, managing students, and engaging with clients through our powerful management platform.</p>
         <a href="#features" class="btn btn-light btn-lg">Explore Features</a>
       </div>
     </section>
